--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -519,9 +519,6 @@ a {
     /*aqua;*/
 }
 
-.members-screens .Camera {
-}
-
 .members-screens.minify {
     height: 64px;
 }
@@ -1966,6 +1963,23 @@ em-emoji-picker {
     text-align: center;
     color: #fff !important;
     background-color: transparent !important;
+    font-family: 'Plus Jakarta Sans', 'Roboto', 'Noto Sans', sans-serif, 'Helvetica Neue', Helvetica !important;
+}
+
+.swal2-input:focus,
+.swal2-file:focus,
+.swal2-textarea:focus {
+    /* box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.06), 0 0 0 3px var(--main-color) !important; */
+    box-shadow: none !important;
+}
+
+#swal2-title {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: left;
+    letter-spacing: -0.02em;
+    padding: 24px 24px 0;
 }
 .swal2-html-container {
     text-align: center;
@@ -1973,13 +1987,63 @@ em-emoji-picker {
     background-color: transparent !important;
 }
 
+.swal2-actions {
+    flex-direction: row-reverse;
+    margin: 8px 0 0 auto !important;
+    width: fit-content !important;
+    padding: 0 20px !important;
+}
+
+.swal2-confirm {
+    height: 56px !important;
+    width: fit-content !important;
+    background: linear-gradient(105.88deg, #4f22c8 0%, #8c6be6 100%, #8c6be6 100%), #2e2e36 !important;
+    border-radius: 12px !important;
+    padding: 13px 18px !important;
+    white-space: nowrap !important;
+    transition: opacity 0.3s !important;
+    min-width: 120px !important;
+}
+
+.swal2-file {
+    background: #0d0e10 !important;
+    border: 0 !important;
+    border-radius: 8px !important;
+    overflow: hidden !important; 
+    padding: 0 3px !important;
+    width: calc(100% - 48px) !important;
+}
+
+.swal2-html-container {
+    text-align: left !important;
+    margin-bottom: 14px !important;
+}
+
+.swal2-cancel,
+.swal2-deny {
+    height: 56px !important;
+    width: fit-content !important;
+    border-radius: 12px !important;
+    padding: 13px 18px !important;
+    white-space: nowrap !important;
+    transition: opacity 0.3s !important;
+    min-width: 120px !important;
+    background: #2e2e36 !important;
+}
+
 .swal2-input {
-    border: var(--border) !important;
+    border: 0 !important;
+    margin: 24px 24px 0 !important;
+    background: #0d0e10 !important;
+    border-radius: 12px !important;
+    height: 56px !important;
+    min-height: 56px !important;
 }
 
 .swal2-popup {
     /* border: var(--border) !important; */
-    border: 0.5px solid rgb(255 255 255 / 32%) !important;
+    /* border: 0.5px solid rgb(255 255 255 / 32%) !important; */
+    border-radius: 12px !important;
 }
 
 .swal2-timer-progress-bar-container {
@@ -2593,6 +2657,8 @@ progress {
     line-height: 24px;
     color: #fff;
     padding: 16px;
+    width: fit-content;
+    white-space: nowrap;
 }
 
 .whiteboardColorPicker {
