--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -46,7 +46,6 @@
 #videoPinMediaContainer {
     z-index: 1;
     position: absolute;
-    display: none;
     top: 89px !important;
     left: 0 !important;
     width: 100%;
@@ -98,7 +97,7 @@
 }
 
 #videoPinMediaContainer video {
-    filter: blur(3px);
+    /* filter: blur(3px); */
 }
 
 #videoMediaContainer .Camera {
