add terms of use and fixed main page

--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -64,21 +64,22 @@
     <main>
         <section class="hero-logo">
             <a class="logo" href="/">
-                <img class="header-logo-image" src="../images/logo.svg" alt="featlytalk-webrtc-logo" />
+                <img class="header-logo-image" src="../images/logo.svg" alt="featlytalk-webrtc-logo"/>
             </a>
         </section>
         <section class="hero">
-                <div class="hero-inner">
-                    <div class="hero-copy">
-                        <h1 class="hero-title mt-0">
-                            Featly - solution for remote music lessons, where you start conversation in just one click
-                            without registration.
-                        </h1>
-                        <button class="button-make-feat">Make Feat</button>
-                    </div>
-                    <div class="hero-main-image">
-                        <img class="landing-main-image" src="../images/landing/image-3.png" alt="featlytalk-webrtc-main-image" />
-                    </div>
+            <div class="hero-inner">
+                <div class="hero-copy">
+                    <h1 class="hero-title mt-0">
+                        Featly - solution for remote music lessons, where you start conversation in just one click
+                        without registration.
+                    </h1>
+                    <button class="button-make-feat">Make Feat</button>
+                </div>
+                <div class="hero-main-image">
+                    <img class="landing-main-image" src="../images/landing/image-3.png"
+                         alt="featlytalk-webrtc-main-image"/>
+                </div>
             </div>
         </section>
         <section class="hero-term-info">
