--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1154,13 +1154,18 @@ label {
 }
 
 @media (max-width: 768px) {
-    .hero-inner {
+    .main.landing .hero-inner {
         display: grid;
         grid-template-columns: 1fr;
         align-items: center;
         justify-content: space-around;
         gap: 1.18vw;
-        position: relative;
+    }
+
+
+    .terms-of-use.landing .hero-inner {
+        display: grid;
+        grid-template-columns: 1fr;
     }
 }
 
@@ -1170,13 +1175,14 @@ label {
     object-fit: contain;
 }
 
-.main.landing .hero-inner .hero-copy:before {
+.main.landing .hero-inner .hero-copy:before,
+.terms-of-use.landing .hero-inner .hero-copy:before {
     background-image: url('../images/landing/ellipse.png');
     background-repeat: no-repeat;
     background-size: contain;
     position: absolute;
-    top: -25%;
-    left: -10%;
+    top: -45%;
+    left: -5%;
     display: block;
     content: "";
     width: 45.465vw;
@@ -1188,6 +1194,22 @@ label {
     margin-bottom: 1.4vh;
 }
 
+.terms-of-use.landing .hero-logo {
+    margin-bottom: 7.1vh;
+}
+
+
+
+.terms-of-use.landing .hero-paragraph{
+    font-weight: 500;
+    font-size: 1.6vh;
+    line-height: 2.5vh;
+    letter-spacing: -0.02em;
+    color: #828282;
+    position: relative;
+    z-index: 1;
+}
+
 @media (max-width: 768px) {
     .main.landing .hero-inner .hero-copy:before {
         top: -15%;
@@ -1197,6 +1219,14 @@ label {
         opacity: .95;
     }
 
+    .terms-of-use.landing .hero-inner .hero-copy:before {
+        top: -45%;
+        left: 20%;
+        width: 90.465vw;
+        height: 100.4vh;
+        opacity: .75;
+    }
+
     .landing.main .hero-copy,
     .landing.main .hero-logo {
         display: flex;
@@ -1204,7 +1234,7 @@ label {
         align-items: center;
     }
 
-    .hero-inner .hero-copy:before {
+     .hero-inner .hero-copy:before {
 
     }
 }
@@ -1212,8 +1242,8 @@ label {
 .hero-logo .logo {
     width: 12.36vw;
     height: 6.02vh;
-    min-width: 179px;
-    min-height: 58px;
+    min-width: 120px;
+    min-height: 40px;
     display: block;
     position: relative;
     z-index: 1;
@@ -1226,7 +1256,7 @@ label {
 }
 
 
-.hero-copy {
+.main.landing .hero-copy {
     margin-bottom: 12.5vh;
 }
 
@@ -1263,9 +1293,15 @@ label {
 }
 
 @media (max-width: 768px) {
-    .hero-title {
+    .main.landing .hero-title {
         text-align: center;
     }
+
+    .terms-of-use.landing .hero-title,
+    .terms-of-use.landing .hero-paragraph{
+        text-align: left;
+    }
+
 
     .hero .button-make-feat {
         margin-left: auto;
@@ -1290,10 +1326,18 @@ label {
     gap: 1.75vw;
 }
 
+.terms-of-use.landing .hero-term-info {
+    margin-top: 19vh;
+}
+
 @media (max-width: 768px) {
     .hero-term-info {
         text-align: center;
         flex-direction: column;
+    }
+
+    .terms-of-use.landing .hero-term-info {
+        margin-top: 10vh;
     }
 }
 
@@ -1731,12 +1775,31 @@ label {
     mix-blend-mode: normal;
 }
 main {
+    flex: 1 0 auto;
+}
+
+.main.landing main {
     /*padding: 9.16vh 9.79vw 13.125vh 8.68vw;*/
     /*padding: 18.864vh 12.29vw 18.33vh 16.875vw;*/
     /*padding: 18.864vh 9.19vw 18.33vh 13.775vw;*/
     padding: 11.3vh 10.972vw 16.45vh 8.68vw;
-    flex: 1 0 auto;
 }
+
+.terms-of-use.landing main {
+    padding: 11.3vh 10.972vw 10vh 8.68vw;
+    background-image: url('../images/landing/terms-of-use-image.png');
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-size: contain;
+}
+
+@media (max-width: 768px) {
+    .terms-of-use.landing main {
+        padding: 11.3vh 10.972vw 10vh 8.68vw;
+        background: none;
+    }
+}
+
 .section-inner {
     position: relative;
     padding-top: 48px;
