--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -83,7 +83,7 @@
             </div>
         </section>
         <section class="hero-term-info">
-            <p>By starting to use the Featly service, you agree to the <a>Terms of Use</a></p>
+            <p>By starting to use the Featly service, you agree to the <a href="/privacy">Terms of Use</a></p>
             <span>© 2023 Featly Inc., all rights reserved</span>
         </section>
     </main>
