--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -353,6 +353,10 @@ input[type='range'] {
         padding: 0px;
     }
 
+    .video-conteiner-box.speaks-now-view video {
+        max-width: 1000px;
+    }
+
     .video-conteiner-box.speaks-now-view .Camera {
         width: 100% !important;
         max-width: none !important;
