--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -228,7 +228,7 @@
             </nav>
             <div id="headerCenterBlock" class="hidden header-center-block">
                 <h1>Videomeeting</h1>
-                <span>12:53</span>
+                <span id="headerTimer">00:00:00</span>
             </div>
             <div class="header-burger">
                 <span></span>
