--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -1147,6 +1147,10 @@ input:checked + .slider:before {
         display: none;
     }
 
+    #settingsButton {
+        padding: 0;
+    }
+
     #control:not(.hidden) {
         grid-template-columns: 36px 36px 36px 36px 36px;
         gap: 24px;
@@ -1235,13 +1239,16 @@ input:checked + .slider:before {
     height: 32px;
     padding: 10px;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .circle-rec-box::after {
     content: '';
-    width: 17px;
-    height: 17px;
-    border: 1.5px solid white;
+    width: 18px;
+    height: 18px;
+    border: 1px solid white;
     border-radius: 50%;
     position: absolute;
     left: 6px;
@@ -1250,8 +1257,9 @@ input:checked + .slider:before {
 
 .circle-rec {
     background: white;
-    width: 100%;
-    height: 100%;
+    width: 14px;
+    min-width: 14px;
+    height: 14px;
     border-radius: 50%;
     animation: recAnimation 2.5s ease-in-out infinite;
 }
@@ -1438,6 +1446,7 @@ input:checked + .slider:before {
 
 #chatRoom {
     height: calc(var(--msger-height));
+    max-height: -webkit-fill-available;
     width: var(--msger-width);
     min-height: calc(var(--msger-height) - 126px);
     min-width: var(--msger-width);
@@ -1454,6 +1463,7 @@ input:checked + .slider:before {
 .msger {
     width: 100%;
     height: 100%;
+    height: -webkit-fill-available;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1898,7 +1908,7 @@ span.highlight {
     }
 
     .msger {
-        padding: 16px 8px 16px 16px;
+        padding: 16px 8px 0px 16px;
     }
 
     #searchChatBox {
@@ -2257,7 +2267,6 @@ button:hover {
     width: 27px;
     max-width: 27px;
 }
-
 
 #roomParticipants td i {
     width: 20px;
