--- a/public/css/Room.css
+++ b/public/css/Room.css
@@ -598,6 +598,12 @@ a {
     letter-spacing: -0.02em;
     color: #30303c;
     white-space: nowrap;
+    opacity: 1;
+    z-index: 0;
+}
+
+#videoMediaContainer .username {
+  display: none;
 }
 
 /*--------------------------------------------------------------
@@ -957,16 +963,54 @@ input:checked + .slider:before {
     height: 19px;
 }
 
+.header-burger-menu {
+    display: none;
+}
+
 @media (max-width: 768px) {
     .header {
         padding: 16px;
         height: 56px;
         grid-template-columns: 160px 28px;
         justify-content: space-between;
+        position: fixed;
+        z-index: 2;
     }
 
     .header-nav {
         display: none;
+    }
+
+    .header-burger-menu {
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        width: 100%;
+        left: 0;
+        top: -100%;
+        height: 100vh;
+        max-height: -webkit-fill-available;
+        padding: 16px;
+        padding-left: 24px;
+        padding-top: 0;
+        background: var(--body-bg);
+        z-index: 9;
+        transition: top 0.3s ease-in-out;
+    }
+
+    .header-burger-menu.showMenu {
+        top: 0;
+    }
+
+    .header-burger-menu button {
+        position: relative;
+        right: 0;
+        top: 16px;
+        margin-left: auto;
+    }
+
+    .header-burger-menu button i {
+        font-size: 36px;
     }
 
     .header-burger {
@@ -1012,7 +1056,8 @@ input:checked + .slider:before {
     transform: scale(0);
 }
 
-.header-nav a {
+.header-nav a,
+.header-burger-menu a {
     font-weight: 500;
     font-size: 24px;
     line-height: 32px;
@@ -1468,7 +1513,7 @@ input:checked + .slider:before {
     flex-direction: column;
     justify-content: space-between;
     /*background: var(--msger-bg);*/
-    padding: 16px 16px 24px 24px;
+    padding: 16px 16px 4px 24px;
     background: var(--body-bg);
 }
 
