--- a/public/css/VideoGrid.css
+++ b/public/css/VideoGrid.css
@@ -112,7 +112,7 @@
     border-width: 0;
 }
 
-#videoMediaContainer > .Camera::before {
+#videoMediaContainer > .Camera::after {
     content: '';
     border: 1px solid #2e2e36;
     width: calc(100% - 2px);
@@ -121,10 +121,11 @@
     top: 0;
     left: 0;
     border-radius: 12px;
+    z-index: 2;
 }
 
-.speaks-now-view #videoMediaContainer > .Camera::before {
-  border: 0px;
+.speaks-now-view #videoMediaContainer > .Camera::after {
+    border: 0px;
 }
 
 .Camera {
@@ -258,19 +259,14 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    /* border-radius: '10px'; */
 }
 
 video {
     width: 100%;
     height: 100%;
     object-fit: var(--videoObjFit);
-    /* border-radius: 10px; */
     cursor: pointer;
-}
-
-video:hover {
-    /* opacity: 0.8; */
+    z-index: 1;
 }
 
 video:fullscreen {
@@ -356,7 +352,7 @@ input[type='range'] {
         flex: 1 1;
     }
 
-    #videoMediaContainer > .Camera::before {
+    #videoMediaContainer > .Camera::after {
         content: '';
         border: 0;
     }
