--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -322,12 +322,12 @@
                 </div>
             </div>
 
-            <div class="button-box mobile-hide">
+            <!-- <div class="button-box mobile-hide">
                 <button id="reactionButton" class="hidden">
                     <i class="fa-regular fa-face-smile-beam"></i>
                 </button>
                 <span>Reaction</span>
-            </div>
+            </div> -->
 
             <div class="button-box mobile-hide">
                 <button id="whiteboardButton" class="hidden"><i class="fa-solid fa-pencil"></i></button>
