close out popup click

--- a/public/views/Room.html
+++ b/public/views/Room.html
@@ -125,11 +125,7 @@
                     </div>
                     <!-- <button id="initAudioVideoButton" class="fas fa-eye" onclick="handleAudioVideo(event)"></button> -->
                 </div>
-                <button
-                    id="initSettingButton"
-                    onclick="toggle(initSettingPopup)"
-                    class="fa-solid fa-gear circle-button"
-                ></button>
+                <button id="initSettingButton" class="fa-solid fa-gear circle-button"></button>
             </div>
 
             <form class="init-input-error-box">
